Test for generator name not provided in auto generators.